<resources>
    <string name="app_name">GmPR</string>
    <string name="no_description_provided">No description provided. Not cool.</string>
    <string name="description_avatar">Avatar</string>
    <string name="pr_login_body">%1$s \u2014 %2$s</string>
    <string name="pref_login">pref_login</string>
    <string name="pref_password">pref_password</string>
    <string name="pref_repos">pref_repos</string>
    <string name="pref_repos_list">pref_repos_list</string>
    <string name="hint_login">login</string>
    <string name="hint_password">password</string>
    <string name="save">Save credentials</string>
    <string name="onboarding">To start, type in your GitHub login and password.</string>
    <string name="title_pref_login">GitHub login</string>
    <string name="title_pref_password">GitHub password</string>
    <string name="title_settings">Settings</string>
    <string name="pref_organization">pref_organization</string>
    <string name="title_pref_organization">GitHub organization</string>
    <string name="hint_organization">GitHub organization</string>
    <string name="choose_organization">Choose an organization to check its pull requests. This is usually the company you work for.</string>
    <string name="choose">Choose</string>
    <string name="error_network">Couldn\'t load pull requests, please check your internet connection</string>
    <string name="error_unauthorized">Access unauthorized, please re-check your credentials</string>
    <string name="error_not_found">Organization not found, please re-check your organization settings</string>
    <string name="error_unknown">An error has occurred while loading pull requests</string>
    <string name="retry">Retry now</string>
    <string name="choose_repos">Choose the repos you want to display</string>
    <string name="onboarding_complete">Let\'s go</string>
    <string name="watched">All watched repos</string>
    <string name="all_repos">All repos from an organization</string>
    <string name="title_watched">Watched by %1$s</string>
    <string name="pref_repos_watched">watched</string>
    <string name="pref_repos_all">all_repos</string>
    <string name="repos_displayed">Repos displayed</string>
    <string name="toast_update_organization">Don\'t forget to update your organization if necessary</string>
    <string-array name="repos_displayed_choices">
        <item>@string/watched</item>
        <item>@string/all_repos</item>
    </string-array>
    <string-array name="repos_displayed_choices_values">
        <item>@string/pref_repos_watched</item>
        <item>@string/pref_repos_all</item>
    </string-array>
</resources>
