<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:inputType="textNoSuggestions"
        android:key="@string/pref_login"
        android:title="@string/title_pref_login" />
    <EditTextPreference
        android:inputType="textPassword"
        android:key="@string/pref_password"
        android:title="@string/title_pref_password" />
    <EditTextPreference
        android:inputType="textNoSuggestions"
        android:key="@string/pref_organization"
        android:title="@string/title_pref_organization" />

    <ListPreference
        android:title="@string/repos_displayed"
        android:key="@string/pref_repos"
        android:entries="@array/repos_displayed_choices"
        android:entryValues="@array/repos_displayed_choices_values" />
</PreferenceScreen>
