<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/choose_repos"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <RadioGroup
        android:id="@+id/repos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/onboarding_vertical_spacing"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/watched"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/watched"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <RadioButton
            android:id="@+id/all_repos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_repos"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    </RadioGroup>

    <Button
        android:id="@+id/go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/onboarding_vertical_spacing"
        android:text="@string/onboarding_complete"
        android:textAppearance="@style/ButtonTextAppearance" />

</LinearLayout>
